     `.BY$grpcol` in `j`. Ex: `DT[, .BY$x, by=x]`. This is now fixed. Closes #5415. Thanks to Stephane Vernede for 
     the bug report.

  o  Fixed another issue with eval(parse(...)) in `j` along with assignment by reference `:=`. Closes #5527. Thanks to 
     Michele Carriero for reporting. 
  
NOTES

  o  Reminder: using rolltolast still works but since v1.9.2 now issues the following warning :
     "'rolltolast' has been marked 'deprecated' in ?data.table since v1.8.8 on CRAN 3 Mar 2013, see NEWS. Please
      change to the more flexible 'rollends' instead. 'rolltolast' will be removed in the next version."

  o  Using with=FALSE with := is now deprecated in all cases, given that wrapping the LHS of
     := with parentheses has been preferred for some time.
         colVar = "col1"
         DT[, colVar:=1, with=FALSE]                   # deprecated, still works silently as before
         DT[, (colVar):=1]                             # please change to this
         DT[, c("col1","col2"):=1]                     # no change
         DT[, 2:4 := 1]                                # no change
         DT[, c("col1","col2"):=list(sum(a),mean(b)]   # no change
         DT[, `:=`(...), by=...]                       # no change
     The next release will issue a warning when with=FALSE is used with :=.

  o  `?duplicated.data.table` explained that `by=NULL` or `by=FALSE` would use all columns, however by=FALSE
     resulted in error. `by=FALSE` is removed from help and duplicated returns an error when by=TRUE/FALSE now. 
     Closes #5424.
     
  o  More info about distinguishing small numbers from 0.0 from v1.9.2+ here :
       http://stackoverflow.com/questions/22290544/grouping-very-small-numbers-e-g-1e-28-and-0-0-in-data-table-v1-8-10-vs-v1-9-2

        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.9.2    **
        **                                          **